; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/brcm80211/brcmsmac/extr_main.c_brcms_b_update_slot_timing.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/brcm80211/brcmsmac/extr_main.c_brcms_b_update_slot_timing.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.brcms_hardware = type { %struct.bcma_device* }
%struct.bcma_device = type { i32 }

@ifs_slot = common dso_local global i32 0, align 4
@M_DOT11_SLOT = common dso_local global i32 0, align 4
@APHY_SLOT_TIME = common dso_local global i32 0, align 4
@BPHY_SLOT_TIME = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.brcms_hardware*, i32)* @brcms_b_update_slot_timing to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @brcms_b_update_slot_timing(%struct.brcms_hardware* %0, i32 %1) #0 {
  %3 = alloca %struct.brcms_hardware*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.bcma_device*, align 8
  store %struct.brcms_hardware* %0, %struct.brcms_hardware** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.brcms_hardware*, %struct.brcms_hardware** %3, align 8
  %7 = getelementptr inbounds %struct.brcms_hardware, %struct.brcms_hardware* %6, i32 0, i32 0
  %8 = load %struct.bcma_device*, %struct.bcma_device** %7, align 8
  store %struct.bcma_device* %8, %struct.bcma_device** %5, align 8
  %9 = load i32, i32* %4, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %20

11:                                               ; preds = %2
  %12 = load %struct.bcma_device*, %struct.bcma_device** %5, align 8
  %13 = load i32, i32* @ifs_slot, align 4
  %14 = call i32 @D11REGOFFS(i32 %13)
  %15 = call i32 @bcma_write16(%struct.bcma_device* %12, i32 %14, i32 519)
  %16 = load %struct.brcms_hardware*, %struct.brcms_hardware** %3, align 8
  %17 = load i32, i32* @M_DOT11_SLOT, align 4
  %18 = load i32, i32* @APHY_SLOT_TIME, align 4
  %19 = call i32 @brcms_b_write_shm(%struct.brcms_hardware* %16, i32 %17, i32 %18)
  br label %29

20:                                               ; preds = %2
  %21 = load %struct.bcma_device*, %struct.bcma_device** %5, align 8
  %22 = load i32, i32* @ifs_slot, align 4
  %23 = call i32 @D11REGOFFS(i32 %22)
  %24 = call i32 @bcma_write16(%struct.bcma_device* %21, i32 %23, i32 530)
  %25 = load %struct.brcms_hardware*, %struct.brcms_hardware** %3, align 8
  %26 = load i32, i32* @M_DOT11_SLOT, align 4
  %27 = load i32, i32* @BPHY_SLOT_TIME, align 4
  %28 = call i32 @brcms_b_write_shm(%struct.brcms_hardware* %25, i32 %26, i32 %27)
  br label %29

29:                                               ; preds = %20, %11
  ret void
}

declare dso_local i32 @bcma_write16(%struct.bcma_device*, i32, i32) #1

declare dso_local i32 @D11REGOFFS(i32) #1

declare dso_local i32 @brcms_b_write_shm(%struct.brcms_hardware*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
